tests/core/invalid/malformed-list/input.core
(core 0 (types) (defs)
